# ViDoRAG

./: .gitignore  README.md  eval.py  ingestion.py  pyproject.toml  requirements.txt  search_engine.py  vidorag_agents.py
agent/: agent_prompt.py  map_dict.py
data/ExampleDataset/: rag_dataset.json
data/ExampleDataset/bge_ingestion/: 00a76e3a9a36255616e2dc14a6eb5dde598b321f_1.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_10.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_11.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_12.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_13.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_14.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_15.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_16.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_17.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_18.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_19.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_2.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_20.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_21.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_22.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_23.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_3.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_4.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_5.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_6.node  00a76e3a9a36255616e2dc14a6eb5dde598b321f_7.node  (+2 more)
llms/: evaluator.py  llm.py  vl_embedding.py
scripts/: ViDoSeek_down.sh  ocr_triditional.py  ocr_vlms.py  pdf2images.py
utils/: format_converter.py  image_preprosser.py  overall_evaluator.py  parse_tool.py
(+23 files in other folders)
